RESOLVED FIXED46690
REGRESSION (r68338): JavaScript error on PowerPC only (crashes on Interpreter built for x86_64)
https://bugs.webkit.org/show_bug.cgi?id=46690
Summary REGRESSION (r68338): JavaScript error on PowerPC only (crashes on Interpreter...
Edward Sabol
Reported 2010-09-27 19:48:53 PDT
When visiting http://trailers.apple.com/trailers/paramount/truegrit/ with the latest Webkit Nightly (r68419), I noticed that the "Info" button and the "Watch Now" menu did not render. The Error console reports: "TypeError: Result of expression 'arguments' [undefined] is not an object" in /trailers/global/scripts/lib/scriptaculous.js:97 No such error occurs when you use r68419 on Intel. (Both 10.5.8 and 10.6.x were tested with extensions turned off.) I tested the previous nightly build (r68242) on PowerPC and no error there either, so the regression must have occurred between r68243 and r68419. I can't really narrow it down any further than that.
Attachments
Patch (1.60 KB, patch)
2010-10-04 17:24 PDT, Oliver Hunt
no flags
Deirdre Saoirse Moen
Comment 1 2010-09-27 19:57:59 PDT
David Kilzer (:ddkilzer)
Comment 2 2010-09-28 17:00:45 PDT
Using git-bisect, I tracked this down to r68338. (Building the Interpreter for x86_64 causes a crash when loading the same page.) <http://trac.webkit.org/changeset/68338>
Geoffrey Garen
Comment 3 2010-09-29 10:11:37 PDT
Thanks, Dave!
Kevin M. Dean
Comment 4 2010-10-01 09:14:11 PDT
*** Bug 46916 has been marked as a duplicate of this bug. ***
Kevin M. Dean
Comment 5 2010-10-01 09:16:25 PDT
Here's another page with the same issue from my Bug 46916. http://www.animepaper.net/gallery/wallpapers/Latest/item107844/ I see the same problem at this link and others on this site where a large picture and following comments are not shown as expected.
Oliver Hunt
Comment 6 2010-10-04 17:24:41 PDT
Oliver Hunt
Comment 7 2010-10-04 19:12:35 PDT
Comment on attachment 69725 [details] Patch forgot to land this apparently, using cq to do it for me
WebKit Commit Bot
Comment 8 2010-10-05 01:29:06 PDT
Comment on attachment 69725 [details] Patch Clearing flags on attachment: 69725 Committed r69096: <http://trac.webkit.org/changeset/69096>
WebKit Commit Bot
Comment 9 2010-10-05 01:29:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.