JavaScriptCore/interpreter/Interpreter.cpp
@@ -3173,8 +3173,8 @@ skip_id_custom_self:
         }
         if (!arguments) {
             Arguments* arguments = new (globalData) Arguments(callFrame);
-            callFrame->r(dst) = JSValue(arguments);
-            callFrame->r(unmodifiedArgumentsRegister(dst)) = JSValue(arguments);
+            callFrame->r(argumentsRegister) = JSValue(arguments);
+            callFrame->r(unmodifiedArgumentsRegister(argumentsRegister)) = JSValue(arguments);
         }
         // fallthrough
     }
